--- a/stringprograming.ipynb
+++ b/stringprograming.ipynb
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1668,44 +1668,129 @@
    "source": [
     "#144\n",
     "ip='abc123'\n",
+    "ip1=''\n",
+    "ip2=''\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z':\n",
+    "        ip1+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        ip2+=i\n",
     "res=''\n",
     "i=0\n",
-    "m=len(ip)//2\n",
-    "while i<m:\n",
-    "    if i<len(ip):\n",
-    "        res+=ip[i]+ip[m+i]\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
     "    i+=1\n",
+    "\n",
+    "print(res)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1b2c\n"
+     ]
+    }
+   ],
+   "source": [
+    "#145\n",
+    "ip='abc12'\n",
+    "ip1=''\n",
+    "ip2=''\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z':\n",
+    "        ip1+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        ip2+=i\n",
+    "res=''\n",
+    "i=0\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
+    "    i+=1\n",
+    "\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1b2c34\n"
+     ]
+    }
+   ],
    "source": [
-    "#145\n",
-    "ip='abc12'\n",
+    "#146\n",
+    "ip='abc1234'\n",
+    "ip1=''\n",
+    "ip2=''\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z':\n",
+    "        ip1+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        ip2+=i\n",
     "res=''\n",
-    "for i in ip:\n"
+    "i=0\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
+    "    i+=1\n",
+    "\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1b2c34\n"
+     ]
+    }
+   ],
    "source": [
-    "#146"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#147"
+    "#147\n",
+    "ip='1a2bc34'\n",
+    "ip1=''\n",
+    "ip2=''\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z':\n",
+    "        ip1+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        ip2+=i\n",
+    "res=''\n",
+    "i=0\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
+    "    i+=1\n",
+    "\n",
+    "print(res)"
    ]
   },
   {
