--- a/stringprograming.ipynb
+++ b/stringprograming.ipynb
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,6 @@
     "ip=\"hello world 123 haii\"\n",
     "res=\"\"\n",
     "c=0\n",
-    "i=0\n",
     "for i in ip:\n",
     "    if i in \"aeiou\" and c<2 or (i>='0' and i<=\"9\"):\n",
     "        c+=1\n",
@@ -1868,6 +1867,61 @@
     "    else:\n",
     "        res+=i\n",
     "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "badcfeg\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='abcdefg'\n",
+    "res=''\n",
+    "for i in range (0,len(st)-1,2):\n",
+    "    ch=st[i]\n",
+    "    ch1=st[i+1]\n",
+    "    res+=ch1+ch\n",
+    "if len(st)%2==1:\n",
+    "    res+=st[-1]\n",
+    "print(res)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=3:\n",
+    "    j=1\n",
+    "    while j<=3:\n",
+    "        print(j)\n",
+    "        i+=1\n",
+    "        j+=1\n",
+    "    i+=1"
    ]
   }
  ],
