--- a/listprogramming.ipynb
+++ b/listprogramming.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1270,19 +1270,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 2, 4, 9, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "#32\n"
+    "#32\n",
+    "l=[3,6,2,8,7,9,4]\n",
+    "mid=len(l)//2\n",
+    "res=[]\n",
+    "i=len(l)-1\n",
+    "while i>=0:\n",
+    "    if i>=0 and i<mid:\n",
+    "        res=[l[i]]+res\n",
+    "    else:\n",
+    "        res+=[l[i]]\n",
+    "    i-=1\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 1, 6, 3, 4, 5, 2, 7, 0, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#33\n",
+    "l=[0,1,2,3,4,5,6,7,8,9]\n",
+    "ls=[]\n",
+    "i=0\n",
+    "j=len(l)-1\n",
+    "while i<len(l) and j>=0:\n",
+    "    if j%2==1:\n",
+    "        ls=[l[j]]+ls\n",
+    "    if i%2==0:\n",
+    "        ls=[l[i]]+ls\n",
+    "    i+=1\n",
+    "    j-=1\n",
+    "print(ls)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 9, 2, 7, 4, 5, 6, 3, 8, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#34\n",
+    "l=[0,1,2,3,4,5,6,7,8,9]\n",
+    "ls=[]\n",
+    "i=len(l)-1\n",
+    "j=0\n",
+    "while i>=0 and j<len(l):\n",
+    "    if j%2==1:\n",
+    "        ls=[l[j]]+ls\n",
+    "    if i%2==0:\n",
+    "        ls=[l[i]]+ls\n",
+    "    i-=1\n",
+    "    j+=1\n",
+    "print(ls)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1314,11 +1385,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "#36\n"
+    "#36\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=len(l)-1\n",
+    "n=int(input())\n",
+    "while n>0:\n",
+    "    while i>=0:\n",
+    "        l[i]=l[i-1]\n",
+    "        i-=1\n",
+    "    n-=1\n",
+    "\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 0, 55, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[2,0,1,3,55,4]\n",
+    "i=0\n",
+    "while i<len(l)-1:\n",
+    "    if l[i]<l[i+1]:\n",
+    "        l[i],l[i+1]=l[i+1],l[i]\n",
+    "        i+=1\n",
+    "    i+=1\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 1, 27, 3, 29, 57, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,9,3,27,29,3,57]\n",
+    "i=0\n",
+    "while i<len(l)-1:\n",
+    "    if l[i]<l[i+1]:\n",
+    "        l[i],l[i+1]=l[i+1],l[i]\n",
+    "        i+=1\n",
+    "    i+=1\n",
+    "print(l)"
    ]
   }
  ],
