--- a/listprogramming.ipynb
+++ b/listprogramming.ipynb
@@ -1385,30 +1385,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 3, 4, 5, 6, 7, 8]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
      ]
     }
    ],
    "source": [
     "#36\n",
     "l=[1,2,3,4,5,6,7,8,9]\n",
-    "i=len(l)-1\n",
+    "i=0\n",
+    "res=[]\n",
     "n=int(input())\n",
-    "while n>0:\n",
-    "    while i>=0:\n",
-    "        l[i]=l[i-1]\n",
-    "        i-=1\n",
+    "n1=n\n",
+    "res[:n1]=[0]*n1\n",
+    "while n!=0:\n",
+    "    for i in range(len(l)-n1):\n",
+    "        res+=[l[i]] \n",
     "    n-=1\n",
-    "\n",
-    "print(l)"
+    "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#37\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=0\n",
+    "res=[]\n",
+    "n=int(input())\n",
+    "n1=n\n",
+    "res[:n1]=[0]*n1\n",
+    "while n!=0:\n",
+    "    for i in range(len(l)-n1):\n",
+    "        res+=[l[i]] \n",
+    "    break\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#37\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=0\n",
+    "res=[]\n",
+    "n=int(input())\n",
+    "n1=n\n",
+    "res[:n1]=[0]*n1\n",
+    "while n!=0:\n",
+    "    for i in range(len(l)-n1):\n",
+    "        res+=[l[i]] \n",
+    "    break\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#39\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=0\n",
+    "res=[]\n",
+    "n=int(input())\n",
+    "n1=n\n",
+    "while n!=0:\n",
+    "    for i in range(n1,len(l)):\n",
+    "        res+=[l[i]]\n",
+    "    break\n",
+    "res[len(l)-n1:]=[0]*n1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 7, 8, 9, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#40\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=0\n",
+    "res=[]\n",
+    "n=int(input())\n",
+    "n1=n\n",
+    "while n!=0:\n",
+    "    for i in range(n1,len(l)):\n",
+    "        res+=[l[i]]\n",
+    "    break\n",
+    "res[len(l)-n1:]=[0]*n1\n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7, 8, 9, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#41\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=0\n",
+    "res=[]\n",
+    "n=int(input())\n",
+    "n1=n\n",
+    "while n!=0:\n",
+    "    for i in range(n1,len(l)):\n",
+    "        res+=[l[i]]\n",
+    "    break\n",
+    "res[len(l)-n1:]=[0]*n1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
