--- a/listprogramming.ipynb
+++ b/listprogramming.ipynb
@@ -1553,11 +1553,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "#42"
+    "#42\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=1\n",
+    "    while i<len(l):\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        i+=1\n",
+    "    j+=1\n",
+    "print(l) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 7, 8, 9, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#43\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=1\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=1\n",
+    "    while i<len(l):\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        i+=1\n",
+    "    j+=1\n",
+    "print(l) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7, 8, 9, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#44\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=1\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=1\n",
+    "    while i<len(l):\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        i+=1\n",
+    "    j+=1\n",
+    "print(l) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#45\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=len(l)-1\n",
+    "    while i>=1:\n",
+    "        l[i],l[i-1]=l[i-1],l[i]\n",
+    "        i-=1\n",
+    "    j+=1\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 9, 1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#46\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=len(l)-1\n",
+    "    while i>=1:\n",
+    "        l[i],l[i-1]=l[i-1],l[i]\n",
+    "        i-=1\n",
+    "    j+=1\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 8, 9, 1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#47\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=len(l)-1\n",
+    "    while i>=1:\n",
+    "        l[i],l[i-1]=l[i-1],l[i]\n",
+    "        i-=1\n",
+    "    j+=1\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 1, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#48\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=1\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=1\n",
+    "    while i<len(l)//2:\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        i+=1\n",
+    "    j+=1\n",
+    "print(l) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6, 7, 8, 9, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#49\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "j=1\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=len(l)//2\n",
+    "    while i<len(l):\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        i+=1\n",
+    "    j+=1\n",
+    "print(l) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n",
+      "[6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#50\n",
+    "\n",
+    "l=[1,2,3,4,5,6,7,8,9]\n",
+    "i=1\n",
+    "j=1\n",
+    "l1=[]\n",
+    "l2=[]\n",
+    "n=int(input())\n",
+    "while j<=n:\n",
+    "    i=1\n",
+    "    while i<=len(l)//2:\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        l1+=[l[i-1]]\n",
+    "        i+=1\n",
+    "    while i<len(l):\n",
+    "        l[i-1],l[i]=l[i],l[i-1]\n",
+    "        l2+=[l[i-1]]\n",
+    "        i+=1\n",
+    "    j+=1\n",
+    "print(l1) \n",
+    "print(l2)\n"
    ]
   },
   {
@@ -1565,56 +1814,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#51\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1662,6 +1864,123 @@
     "        i+=1\n",
     "    i+=1\n",
     "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "com\n",
+      "com\n",
+      "in\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=['www.amazon.com','www.google.com','www.swiggy.com.in']\n",
+    "res=''\n",
+    "for i in l:\n",
+    "    for j in i:\n",
+    "        if j=='.':\n",
+    "            res=''\n",
+    "        else:\n",
+    "            res+=j     \n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amazon\n",
+      "google\n",
+      "swiggy\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=['www.amazon.com','www.google.com','www.swiggy.com.in']\n",
+    "res=''\n",
+    "for i in l:\n",
+    "    c=0\n",
+    "    for j in i:\n",
+    "        if j=='.':\n",
+    "            c+=1\n",
+    "            if c==2  :\n",
+    "                print(res)\n",
+    "            res=''\n",
+    "        else:\n",
+    "            res+=j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"hello world welcome to python\"\n",
+    "l=[]\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i==' ':\n",
+    "        l+=[res]\n",
+    "        res=\"\"\n",
+    "    else:\n",
+    "        res+=i\n",
+    "l+=[res]\n",
+    "max=l[0]\n",
+    "for i in l:\n",
+    "    if len(i)>len(max):\n",
+    "        max=i\n",
+    "        \n",
+    "print(max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"hello world welcome to python\"\n",
+    "res=\"\"\n",
+    "max=0\n",
+    "for i in st:\n",
+    "    if i!=' ':\n",
+    "        res+=i\n",
+    "    else:\n",
+    "        res=''\n",
+    "    if len(res)>max:\n",
+    "        max=len(res)\n",
+    "        res1=res\n",
+    "print(res1)"
    ]
   }
  ],
