--- a/numberprogramming2.ipynb
+++ b/numberprogramming2.ipynb
@@ -39,6 +39,102 @@
     "    print('not autobiographical number')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "s=0\n",
+    "i=1\n",
+    "while i>0:\n",
+    "    while n!=0:\n",
+    "        d=n%10\n",
+    "        s+=d\n",
+    "        n=n//10\n",
+    "    if s>=10:\n",
+    "        n=s\n",
+    "        s=0\n",
+    "    else:\n",
+    "        print(s)\n",
+    "        break\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "s=0\n",
+    "i=1\n",
+    "while n!=0:\n",
+    "    d=n%10\n",
+    "    s+=d\n",
+    "    n=n//10\n",
+    "    if  n==0 and s<=9:\n",
+    "        print(s)\n",
+    "        n=0\n",
+    "    elif n==0:\n",
+    "        n=s\n",
+    "        s=0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "sum=0\n",
+    "sum1=0\n",
+    "while n!=0:\n",
+    "    d=n%10\n",
+    "    sum+=d\n",
+    "    n=n//10\n",
+    "if len(str(sum))>1:\n",
+    "    while sum!=0:\n",
+    "        d1=sum%10\n",
+    "        sum1+=d1\n",
+    "        sum=sum//10\n",
+    "print(sum1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
