--- a/numberprogramming.ipynb
+++ b/numberprogramming.ipynb
@@ -585,6 +585,41 @@
     "else:\n",
     "    print(\"not fascinating number\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neon number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "sq=n**2\n",
+    "i=0\n",
+    "s=0\n",
+    "while sq!=0:\n",
+    "    d=sq%10\n",
+    "    s=s+d\n",
+    "    sq=sq//10\n",
+    "if n==s:\n",
+    "    print(\"neon number\")\n",
+    "else:\n",
+    "    print(\"not neon number\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
