--- a/listprogramming.ipynb
+++ b/listprogramming.ipynb
@@ -1982,6 +1982,15 @@
     "        res1=res\n",
     "print(res1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st='hello world welcome to python'\n"
+   ]
   }
  ],
  "metadata": {
