--- a/dictionaryprogramming.ipynb
+++ b/dictionaryprogramming.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -415,31 +415,26 @@
    ],
    "source": [
     "st=\"hello world hii world\"\n",
-    "res=\"\"\n",
     "d={}\n",
+    "res=\"\"\n",
     "for i in st:\n",
     "    if i!=\" \":\n",
     "        res+=i\n",
     "    elif i==\" \":\n",
-    "        if res not in d:\n",
-    "            d[res]=1\n",
-    "            res=''\n",
-    "        elif res in d:\n",
-    "            d[res]=d[res]+1\n",
-    "            res=''\n",
+    "        \n",
+    "            if res not in d:\n",
+    "                d[res]=1\n",
+    "                res=\"\"\n",
+    "            elif i in d:\n",
+    "                d[res]=d[res]+1\n",
+    "                res=\"\"\n",
     "if res in d:\n",
     "    d[res]=d[res]+1\n",
     "print(d)\n",
     "    \n",
-    "    "
+    "\n",
+    "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
