--- a/dictionaryprogramming.ipynb
+++ b/dictionaryprogramming.ipynb
@@ -438,6 +438,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: '4', 3: '5'}\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={}\n",
+    "n=int(input())\n",
+    "for i in range(n):\n",
+    "    key=int(input())\n",
+    "    value=input()\n",
+    "    d[key]=value\n",
+    "\n",
+    "print(d)\n",
+    "print(d[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
