--- a/listprogramming.ipynb
+++ b/listprogramming.ipynb
@@ -1985,11 +1985,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olleh dlrow emoclew ot nohtyp\n"
+     ]
+    }
+   ],
    "source": [
-    "st='hello world welcome to python'\n"
+    "st='hello world welcome to python'\n",
+    "res=''\n",
+    "res1=''\n",
+    "for i in st:\n",
+    "    if i!=\" \":\n",
+    "        res+=i\n",
+    "    elif i==\" \":\n",
+    "        res1+=res[::-1]+' '\n",
+    "        res=\"\"\n",
+    "  \n",
+    "res1+=res[::-1]\n",
+    "print(res1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'python': 1, 'is': 1, 'programming': 1, 'language': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"python is programming language\"\n",
+    "d={}\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i!=\" \":\n",
+    "        res+=i\n",
+    "    elif i==\" \":\n",
+    "        if res not in d:\n",
+    "            d[res]=1\n",
+    "            res=\"\"\n",
+    "        elif res in d:\n",
+    "            d[res]=d[res]+1\n",
+    "            res=\"\"    \n",
+    "if res:\n",
+    "    d[res]=1\n",
+    "print(d)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PYTHON', 'SCRIPTING', 'PROGRAMMING', 'LANGUAGE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"PYTHON SCRIPTING PROGRAMMING LANGUAGE\"\n",
+    "l=[]\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i==' ':\n",
+    "        l+=[res]\n",
+    "        res=\"\"\n",
+    "    else:\n",
+    "        res+=i\n",
+    "l+=[res]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PYTHON', 'GNITPIRCS', 'PROGRAMMING', 'EGAUGNAL']\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"PYTHON SCRIPTING PROGRAMMING LANGUAGE\"\n",
+    "l=[]\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i==' ':\n",
+    "        l+=[res]\n",
+    "        res=\"\"\n",
+    "    else:\n",
+    "        res+=i\n",
+    "l+=[res]\n",
+    "l1=[]\n",
+    "i=0\n",
+    "while i<len(l):\n",
+    "    if i%2==0:\n",
+    "        l1+=[l[i]]\n",
+    "    elif i%2==1:\n",
+    "        l1+=[l[i][::-1]]    \n",
+    "    i+=1\n",
+    "print(l1)"
    ]
   }
  ],
