--- a/alpabetpattern.ipynb
+++ b/alpabetpattern.ipynb
@@ -30,6 +30,417 @@
     "    print()\n",
     "    i+=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * *   \n",
+      "*       * \n",
+      "* * * *   \n",
+      "*       * \n",
+      "* * * *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if (i == 1 and j != 5) or (j == 1) or (j == 5 and (i != 1 and i != 3 and i != 5)) or (i == 3 and j != 5) or (i == 5 and j != 5):\n",
+    "            print(\"*\", end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * * * \n",
+      "*         \n",
+      "*         \n",
+      "*         \n",
+      "  * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  ((i==1 or i==5 )and j!=1) or (j==1 and (i!=1 and i!=5)):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "*       * \n",
+      "*       * \n",
+      "*       * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or i==5 or j==1 or ((i==1 or i==5 )and j!=5) or (j==5 and (i!=1 and i!=5)):\n",
+    "            \n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "*         \n",
+      "* * * * * \n",
+      "*         \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if i==1 or i==3 or i==5 or j==1:\n",
+    "               print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "*         \n",
+      "* * * * * \n",
+      "*         \n",
+      "*         \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if i==1 or i==3 or j==1:\n",
+    "               print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * * * \n",
+      "*         \n",
+      "*   * * * \n",
+      "*       * \n",
+      "  * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  ((i==1 or i==5 )and j!=1) or (j==1 and (i!=1 and i!=5)) or (i==3 and j!=2) or (j==5 and i==4) :\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "*       * \n",
+      "* * * * * \n",
+      "*       * \n",
+      "*       * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or j==5 or i==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or i==5 or j==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "    *     \n",
+      "    *     \n",
+      "*   *     \n",
+      "  * *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or (i==5 and j!=4 and j!=5 and j!=1) or j==3 or(i==4 and j==1) :\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*     *   \n",
+      "*   *     \n",
+      "* *       \n",
+      "*   *     \n",
+      "*     *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or (i<=3 and i+j==5) or (i==4 and j==3) or (i==5 and j==4):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*         \n",
+      "*         \n",
+      "*         \n",
+      "*         \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or i==5:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "* *   * * \n",
+      "*   *   * \n",
+      "*       * \n",
+      "*       * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or j==5 or (i<=3 and i==j) or (i==2 and j==4):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "* *     * \n",
+      "*   *   * \n",
+      "*     * * \n",
+      "*       * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or j==5 or i==j:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
