--- a/alpabetpattern.ipynb
+++ b/alpabetpattern.ipynb
@@ -441,6 +441,263 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * * * \n",
+      "*         \n",
+      "* * * * * \n",
+      "        * \n",
+      "* * * *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j!=1)  or (i==3 ) or (i==5 and j!=5) or (i==2 and j==1 ) or (i==4 and j==5):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or j==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "*       * \n",
+      "*       * \n",
+      "*       * \n",
+      "  * * *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (j==1 and i!=5) or (j==5 and i!=5) or (i==5 and j in range(2,5)):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  :\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "*       * \n",
+      "*   *   * \n",
+      "* *   * * \n",
+      "*       * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or j==5 or (i>=3 and i+j==6) or (i==4 and j==4):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "  *   *   \n",
+      "    *     \n",
+      "  *   *   \n",
+      "*       * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==j or i+j==6:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "  *   *   \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i<=3 and i==j) or (i<=2 and i+j==6) or (j==3 and i>=4):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "      *   \n",
+      "    *     \n",
+      "  *       \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or i==5 or i+j==6:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   }
  ],
  "metadata": {
