--- a/alpabetpattern.ipynb
+++ b/alpabetpattern.ipynb
@@ -95,18 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * * * * \n",
+      "* * * *   \n",
       "*       * \n",
       "*       * \n",
       "*       * \n",
-      "* * * * * \n"
+      "* * * *   \n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
     "while i<=5:\n",
     "    j=1\n",
     "    while j<=5:\n",
-    "        if  i==1 or i==5 or j==1 or ((i==1 or i==5 )and j!=5) or (j==5 and (i!=1 and i!=5)):\n",
+    "        if  (i==1 and j<=4) or (i==5 and j<=4) or j==1 or (j==5 and i>=2 and i<=4) :\n",
     "            \n",
     "            print(\"*\",end=\" \")\n",
     "        else:\n",
@@ -437,35 +437,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * *   \n",
+      "*       * \n",
+      "*       * \n",
+      "*       * \n",
+      "  * * *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (j==1 and 2<=i<=4) or (i==1 and 2<=j<=4) or (i==5 and 2<=j<=4) or (j==5 and 2<=i<=4):\n",
+    "            \n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * *   \n",
+      "*       * \n",
+      "* * * *   \n",
+      "*         \n",
+      "*         \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j<=4) or j==1 or (i==3 and j<=4) or (i==2 and j==5):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * * *   \n",
+      "*       * \n",
+      "*   *   * \n",
+      "*     *   \n",
+      "  * *   * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (j==1 and 2<=i<=4) or (i==1 and 2<=j<=4) or (i==5 and 2<=j<=3) or (j==5 and 2<=i<=3) or (i>=3 and i==j):\n",
+    "            \n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * *   \n",
+      "*       * \n",
+      "* * * *   \n",
+      "*     *   \n",
+      "*       * \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j<=4) or j==1 or (i==3 and j<=4) or (i==2 and j==5) or (i>=4 and i==j):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +572,7 @@
      "text": [
       "  * * * * \n",
       "*         \n",
-      "* * * * * \n",
+      "  * * *   \n",
       "        * \n",
       "* * * *   \n"
      ]
@@ -485,7 +583,7 @@
     "while i<=5:\n",
     "    j=1\n",
     "    while j<=5:\n",
-    "        if  (i==1 and j!=1)  or (i==3 ) or (i==5 and j!=5) or (i==2 and j==1 ) or (i==4 and j==5):\n",
+    "        if  (i==1 and j!=1)  or (i==3  and 2<=j<=4) or (i==5 and j!=5) or (i==2 and j==1 ) or (i==4 and j==5):\n",
     "            print(\"*\",end=\" \")\n",
     "        else:\n",
     "            print(\" \",end=\" \")\n",
@@ -558,15 +656,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       * \n",
+      "          \n",
+      "  *   *   \n",
+      "          \n",
+      "    *     \n"
+     ]
+    }
+   ],
    "source": [
     "i=1\n",
     "while i<=5:\n",
     "    j=1\n",
     "    while j<=5:\n",
-    "        if  :\n",
+    "        if  (i==1 and j==1) or (i==3 and j==2) or (i==5 and j==3) or (i==3 and j==4) or (i==1 and j==5):\n",
     "            print(\"*\",end=\" \")\n",
     "        else:\n",
     "            print(\" \",end=\" \")\n",
