--- a/patternprogramming.ipynb
+++ b/patternprogramming.ipynb
@@ -1546,6 +1546,41 @@
     "    print()\n",
     "    i+=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=int(input())\n",
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  :\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  :\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   }
  ],
  "metadata": {
