--- a/numberpatterns.ipynb
+++ b/numberpatterns.ipynb
@@ -31,6 +31,108 @@
     "    print()\n",
     "    i+=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        5 \n",
+      "      4 5 \n",
+      "    3 4 5 \n",
+      "  2 3 4 5 \n",
+      "1 2 3 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "i=1\n",
+    "while i<=n:\n",
+    "    j=1\n",
+    "    while j<=n:\n",
+    "        a=1\n",
+    "        if i+j>=n+1:\n",
+    "            print(j,end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "        a-=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 \n",
+      "1 2 3 4   \n",
+      "1 2 3     \n",
+      "1 2       \n",
+      "1         \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "i=1\n",
+    "while i<=n:\n",
+    "    j=1\n",
+    "    while j<=n:\n",
+    "        a=5\n",
+    "        if i+j<=n+1:\n",
+    "            print(j,end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "        a-=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        5 \n",
+      "      4 5 \n",
+      "    3 4 5 \n",
+      "  2 3 4 5 \n",
+      "1 2 3 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "i=1\n",
+    "while i<=n:\n",
+    "    j=1\n",
+    "    while j<=n:\n",
+    "        a=1\n",
+    "        if i+j>=n+1:\n",
+    "            print(j,end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "        a+1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
   }
  ],
  "metadata": {
