--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "['m', 'madam', 'a', 'ada', 'd', 'a']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,6 +377,164 @@
     "    return False\n",
     "perfect(6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ramesh\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=\"ramesh\"\n",
+    "res=\"\"\n",
+    "for i in n:\n",
+    "    res=res+i\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def palindrome(s):\n",
+    " i=0\n",
+    " res=''\n",
+    "while i>n:\n",
+    "    j=1\n",
+    "    while j>n:\n",
+    "        s=s[0]\n",
+    "        s=s+i\n",
+    "        res+=i\n",
+    "        j+=1\n",
+    "        i+=1\n",
+    "    res[::-1]\n",
+    "palindrome(\"sahithya\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"hello python programming \"\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i!=\" \":\n",
+    "        res+=i\n",
+    "    else:\n",
+    "        if res!=\"\" and len(res)%2==0:\n",
+    "            print(res)\n",
+    "        res=\"\"\n",
+    "\n",
+    "if res!=0 and len(res)%2==0:\n",
+    "    print(res)\n",
+    "\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellopythonprogramming\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"hello python programming \"\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i!=\" \":\n",
+    "        res+=i\n",
+    "    else:\n",
+    "        if res!=\"\" and len(res)%2==0:\n",
+    "            print(res)\n",
+    "            res=\"\"\n",
+    "\n",
+    "if res!=0 and len(res)%2==0:\n",
+    "    print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mahala\n",
+      "mahalakshmi\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "half=len(st)//2\n",
+    "res=\"\"\n",
+    "for i in range(0,half+1):\n",
+    "    res+=st[i]\n",
+    "print(res)\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "akshmi\n",
+      "mahalakshmi\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "half=len(st)//2\n",
+    "res=\"\"\n",
+    "for i in range(half,len(st)):\n",
+    "    res+=st[i]\n",
+    "print(res)\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
