--- a/patternprogramming.ipynb
+++ b/patternprogramming.ipynb
@@ -1549,23 +1549,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*       *   * * *   * * * *   * * * * * *     *   * * * *   * * * * *   * * * * *       * *       *   * * *   \n",
+      "*       * *       * *       *     *     *   *     *       *     *     *         *       * * *     * *       * \n",
+      "* * * * * * * * * * * * * *       *     * *       * * * *       *       * * *   * * * * * *   *   * * * * * * \n",
+      "*       * *       * *     *       *     *   *     *     *       *             * *       * *     * * *       * \n",
+      "*       * *       * *       * * * * * * *     *   *       * * * * * * * * * *   *       * *       * *       * \n"
+     ]
+    }
+   ],
    "source": [
-    "n=int(input())\n",
     "i=1\n",
     "while i<=5:\n",
+    "\n",
     "    j=1\n",
     "    while j<=5:\n",
-    "        if  j==3:\n",
-    "            print(\"*\",end=\" \")\n",
-    "        else:\n",
-    "            print(\" \",end=\" \")\n",
-    "        j+=1\n",
-    "    j=1\n",
-    "    while j<=5:\n",
-    "        if  :\n",
+    "        if  j==1 or j==5 or i==3:\n",
     "            print(\"*\",end=\" \")\n",
     "        else:\n",
     "            print(\" \",end=\" \")\n",
@@ -1573,7 +1578,192 @@
     "\n",
     "    j=1\n",
     "    while j<=5:\n",
-    "        if  :\n",
+    "        if  (i==1 and (j!=1 and j!=5)) or (j==1 and i!=1) or (j==5 and i!=1) or i==3:  \n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j<=4) or j==1 or (i==3 and j<=4) or (i==2 and j==5) or (i>=4 and i==j):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or i==5 or j==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or (i<=3 and i+j==5) or (i==4 and j==3) or (i==5 and j==4):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j<=4) or j==1 or (i==3 and j<=4) or (i==2 and j==5) or (i>=4 and i==j):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==1 or i==5 or j==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j!=1)  or (i==3  and 2<=j<=4) or (i==5 and j!=5) or (i==2 and j==1 ) or (i==4 and j==5):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or j==5 or i==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    \n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  i==j or j==1 or j==5:  \n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and (j!=1 and j!=5)) or (j==1 and i!=1) or (j==5 and i!=1) or i==3:  \n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      *     *   *   *       * \n",
+      "      *   *   *   * *       * \n",
+      "      *   *       * *       * \n",
+      "      *     *   *   *       * \n",
+      "      *       *       * * *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=5:\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==4:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  ((i==2 or i==3)and (j==1 or j==5)) or ((j==2 or j==4) and(i==1 or i==4)) or (j==3 and (i==2 or i==5)) :\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (j==1 and i!=5) or (j==5 and i!=5) or (i==5 and j in range(2,5)):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    print()\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * *     * * * * *       * *       * *       * \n",
+      "*         *         *       * *       * *       * \n",
+      "* * * *     * * *   * * * * * *       * *       * \n",
+      "*                 * *       * *       * *       * \n",
+      "* * * *   * * * *   *       *   * * *     * * *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "    \n",
+    "i=1\n",
+    "while i<=5:\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if (i==1 or i==3 or i==5 or j==1) and j!=5:\n",
+    "               print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (i==1 and j!=1)  or (i==3  and 2<=j<=4) or (i==5 and j!=5) or (i==2 and j==1 ) or (i==4 and j==5):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  j==1 or j==5 or i==3:\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "    \n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (j==1 and i!=5) or (j==5 and i!=5) or (i==5 and j in range(2,5)):\n",
+    "            print(\"*\",end=\" \")\n",
+    "        else:\n",
+    "            print(\" \",end=\" \")\n",
+    "        j+=1\n",
+    "\n",
+    "    j=1\n",
+    "    while j<=5:\n",
+    "        if  (j==1 and i!=5) or (j==5 and i!=5) or (i==5 and j in range(2,5)):\n",
     "            print(\"*\",end=\" \")\n",
     "        else:\n",
     "            print(\" \",end=\" \")\n",
