--- a/grooming.ipynb
+++ b/grooming.ipynb
@@ -332,6 +332,114 @@
     "        c+=1\n",
     "print(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"hello python programming \"\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i!=\" \":\n",
+    "        res+=i\n",
+    "    else:\n",
+    "        if res!=\"\" and len(res)%2==0:\n",
+    "            print(res)\n",
+    "        res=\"\"\n",
+    "\n",
+    "if res!=0 and len(res)%2==0:\n",
+    "    print(res)\n",
+    "\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellopythonprogramming\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"hello python programming \"\n",
+    "res=\"\"\n",
+    "for i in st:\n",
+    "    if i!=\" \":\n",
+    "        res+=i\n",
+    "    else:\n",
+    "        if res!=\"\" and len(res)%2==0:\n",
+    "            print(res)\n",
+    "            res=\"\"\n",
+    "\n",
+    "if res!=0 and len(res)%2==0:\n",
+    "    print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mahala\n",
+      "mahalakshmi\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "half=len(st)//2\n",
+    "res=\"\"\n",
+    "for i in range(0,half+1):\n",
+    "    res+=st[i]\n",
+    "print(res)\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "akshmi\n",
+      "mahalakshmi\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "half=len(st)//2\n",
+    "res=\"\"\n",
+    "for i in range(half,len(st)):\n",
+    "    res+=st[i]\n",
+    "print(res)\n",
+    "print(st)"
+   ]
   }
  ],
  "metadata": {
