--- a/grooming.ipynb
+++ b/grooming.ipynb
@@ -440,6 +440,83 @@
     "print(res)\n",
     "print(st)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def amstrong(n):\n",
+    "    n1=n\n",
+    "    n2=n\n",
+    "    c=0\n",
+    "    while n!=0:\n",
+    "        c+=1\n",
+    "        n//=10\n",
+    "    sum=0\n",
+    "    while n1!=0:\n",
+    "        d=n1%10\n",
+    "        sum+=d**c\n",
+    "        n1//=10\n",
+    "    if sum==n2:\n",
+    "        return True\n",
+    "    return False\n",
+    "amstrong(153)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('k', 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maxoccuredchar(st):\n",
+    "    max_ch=st[0]\n",
+    "    max_c=0\n",
+    "    for i in st:\n",
+    "        c=0\n",
+    "\n",
+    "        for j in st:\n",
+    "            if i==j:\n",
+    "                c+=1\n",
+    "        if c>max_c:\n",
+    "            max_c=c\n",
+    "            max_ch=i\n",
+    "    return (max_ch,max_c)\n",
+    "maxoccuredchar(\"mnagahsskkk\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
